--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-hbs": "^1.0.2",
     "express-session": "~1.14.1",
     "file-stream-rotator": "~0.0.6",
+    "forever": "~0.15.1",
     "generate-password": "~1.1.1",
     "glob": "~7.0.0",
     "grunt": "~1.0.1",
