update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,11 @@ coverage/
 
 # MEAN.js app and assets
 # ======================
-public/dist/
+#public/dist/
 uploads
 modules/users/client/img/profile/uploads
-config/env/local.js
-config/env/local-*.js
+#config/env/local.js
+#config/env/local-*.js
 *.pem
 
 # Ignoring MEAN.JS's gh-pages branch for documenation
