--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auth-static": "^1.0.3",
+    "basic-auth": "^2.0.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^5.0.1",
+    "ejs": "^2.5.8",
     "eslint": "^4.18.1",
     "forever": "^0.15.3",
     "glob": "^7.1.2",
     "hapi": "^17.2.0",
+    "hapi-auth-basic": "^5.0.0",
     "hapi-auth-jwt2": "^8.0.0",
     "html-to-json": "^0.6.0",
     "joi": "^13.1.2",
@@ -25,6 +29,7 @@
     "mongoose": "^5.0.7",
     "node-cron": "^1.2.1",
     "nodemon": "^1.17.2",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "vision": "^5.3.2"
   }
 }
