--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL=mongodb://kom4rud!n:zxcvb1234@ds127129.mlab.com:27129/main-db
-DATABASE_HOST=main-db
+DATABASE_HOST=localhost
 DATABASE_PORT=27017
 SECRET=SCERET
