--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/maps": "^0.4.5",
-    "auth-static": "^1.0.3",
-    "basic-auth": "^2.0.0",
+    "async": "^2.6.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "cheerio": "^1.0.0-rc.2",
