--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/maps": "^0.4.5",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
+    "bufferlist": "^0.1.0",
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
@@ -28,6 +29,7 @@
     "mongoose": "^5.0.7",
     "node-cron": "^1.2.1",
     "nodemon": "^1.17.2",
+    "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "vision": "^5.3.2"
   }
