--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/maps": "^0.4.5",
+    "axios": "^0.18.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "bufferlist": "^0.1.0",
