--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^1.17.2",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
+    "sort-by-distance": "^1.0.0",
     "vision": "^5.3.2"
   }
 }
