--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "mongoose": "^5.0.7",
+    "mongoose-double": "0.0.1",
     "node-cron": "^1.2.1",
     "nodemon": "^1.17.2",
     "request": "^2.85.0",
