--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL=mongodb://kom4rud!n:zxcvb1234@ds127129.mlab.com:27129/main-db
+DATABASE_URL=mongodb://root:root@ds135750.mlab.com:35750/el-dev
+#mongodb://komarudin:k0m4rud1n@ds039165.mlab.com:39165/mean-dev
 DATABASE_HOST=localhost
 DATABASE_PORT=27017
 SECRET=SCERET
