--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "bufferlist": "^0.1.0",
+    "chalk": "^2.4.1",
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
