--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server"
+    "start": "./node_modules/.bin/nodemon server"
   },
   "author": "",
   "license": "ISC",
@@ -24,18 +24,19 @@
     "hapi": "^17.2.0",
     "hapi-auth-basic": "^5.0.0",
     "hapi-auth-jwt2": "^8.0.0",
+    "hapi-swagger": "^9.3.0",
     "html-to-json": "^0.6.0",
-    "inert": "^5.1.0",
+    "inert": "^5.1.2",
     "joi": "^13.1.2",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "mongoose": "^5.0.7",
     "mongoose-double": "0.0.1",
     "node-cron": "^1.2.1",
-    "nodemon": "^1.17.2",
+    "nodemon": "^1.18.9",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "sort-by-distance": "^1.0.0",
-    "vision": "^5.3.2"
+    "vision": "^5.4.4"
   }
 }
